# catan-sdk

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml
.github/workflows/: release.yml
catan/: __init__.py  approved_imports.py  config.py  diff.py  game.py  player.py  register.py  run.py  sim.py  submit.py
catan/board/: __init__.py  setup.py  topology.py  viz_topology.py
catan/engine/: __init__.py  dev_validator.py  engine.py  executor.py  logger.py  longest_road.py  validator.py
catan/examples/: four_basic_players.yaml  heuristic_vs_basic.yaml
catan/models/: __init__.py  actions.py  board.py  enums.py  state.py
catan/players/: __init__.py  basic_player.py  helpers.py  registry.py
catan/tests/: test_board.py  test_dev_validator.py  test_executor.py  test_game_state.py  test_integration.py  test_register.py  test_rule_violations.py  test_sim.py  test_validator.py
catan_sdk_support/: __init__.py
submissions/: README.md  dev_card_bot.py  example_bot.py  heuristic_bot.py  planner_bot.py
