[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "catan-sdk"
version = "0.1.3"
description = "Catan game engine and bot development toolkit"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
keywords = ["catan", "board-game", "simulation", "bot", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/SirjanK/catan-sdk"
Repository = "https://github.com/SirjanK/catan-sdk"
Issues = "https://github.com/SirjanK/catan-sdk/issues"

[project.optional-dependencies]
# Packages available to bot submissions at runtime on the tournament server.
# Bot source files may import from any of these freely.
# To add a new package, open a PR updating this list AND catan/approved_imports.py.
bot-extras = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "scikit-learn>=1.3",
]
dev = [
    "pytest>=8.0",
    "pytest-timeout",
    "tqdm",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["catan", "catan_sdk_support"]
